fix: playsong, playsong icon visibility

--- a/src/app/components/edit-title/edit-title.component.sass
+++ b/src/app/components/edit-title/edit-title.component.sass
@@ -2,7 +2,7 @@
 
 form
   @include styles.form-wrapper
-  margin-top: 1rem
+  margin: 1rem auto 2rem auto
 
 input
   @include styles.add-input
